# dynamixel_control

./: .gitignore  CMakeLists.txt  CMakeLists.txt~  README.md  package.xml  package.xml~
launch/: dynamixel_control.launch  dynamixel_control.launch~
launch/.svn/: all-wcprops  entries
msg/: PositionCtrl.msg  SpeedWheelCtrl.msg
src/: dynamixel_control.cpp  dynamixel_control.cpp.autosave
srv/: GetActuatorLoad.srv  GetActuatorPosition.srv  GetActuatorVoltage.srv  GetActuatorsLoads.srv  GetActuatorsPositions.srv  GetActuatorsPositions.srv~  GetActuatorsVoltages.srv  GetArmPosition.srv~  GetIDs.srv  GetIDs.srv~  SetActuatorPosition.srv  SetActuatorPosition.srv~  SetActuatorSpeed.srv  SetActuatorsPositions.srv  SetActuatorsPositions.srv~  SetActuatorsSpeeds.srv  SetActuatorsSpeeds.srv~
